Make card tertiary color

--- a/www/kerbit/imports/ui/pages/requestPickup.html
+++ b/www/kerbit/imports/ui/pages/requestPickup.html
@@ -10,7 +10,7 @@
   </div>
 
   <div id="pop" class="background-transparent">
-    <div class="card z-depth-5">
+    <div class="card z-depth-5 tertiary-color">
       <div class="card-content">
         <p>Please choose where you want your waste picked up from</p>
       </div>
