Add marker on map center

--- a/www/kerbit/imports/ui/pages/requestPickup.html
+++ b/www/kerbit/imports/ui/pages/requestPickup.html
@@ -5,7 +5,7 @@
 </template>
 
 <template name="RequestPickupHelper">
-  <div id="map-london-container">
+  <div id="map-london-container" class="marker-overlay">
     {{> googleMap name="map" options=mapOptions}}
   </div>
 
