[PB] Change modal to page center

--- a/www/kerbit/imports/ui/pages/makeOffers.html
+++ b/www/kerbit/imports/ui/pages/makeOffers.html
@@ -11,7 +11,7 @@
   </div>
 
   <!-- Modal Structure -->
-  <div id="modal1" class="modal bottom-sheet">
+  <div id="modal1" class="modal">
     <div class="modal-content">
       <h4>There are currently {{getNum getArea}} request(s) in {{getArea}}.</h4>
       <ul class="collapsible" data-collapsible="accordion">
