Fix broken GeoJson. Allow making requests

--- a/www/kerbit/imports/ui/pages/myOffers.html
+++ b/www/kerbit/imports/ui/pages/myOffers.html
@@ -23,7 +23,7 @@
                   <div class="card-image">
                     {{#each ImageWithIds imageIds}}
                       <img src="{{url store='images'}}" alt="request image"
-                                                        class="responsive-img">
+                                                        class="responsive-img same-size-image">
                     {{/each}}
                   </div>
                   <div class="card-content">
@@ -74,7 +74,7 @@
                   <div class="card-image">
                     {{#each ImageWithIds imageIds}}
                       <img src="{{url store='images'}}" alt="request image"
-                                                        class="responsive-img">
+                                                        class="responsive-img same-size-image">
                     {{/each}}
                   </div>
                   <div class="card-content">
