--- a/www/kerbit/imports/ui/pages/myOffers.html
+++ b/www/kerbit/imports/ui/pages/myOffers.html
@@ -17,7 +17,7 @@
       {{#each pendingOffers}}
         {{#each requests requestId}}
           <div class="row">
-            <div class="col s12 m7">
+            <div class="col s6">
               <div class="card">
                 {{#each ItemWithId itemId}}
                   <div class="card-image">
@@ -68,7 +68,7 @@
       <br>
       {{#each transactions}}
           <div class="row">
-            <div class="col s12 m7">
+            <div class="col s6">
               <div class="card">
                 {{#each ItemWithId itemId}}
                   <div class="card-image">
