--- a/www/kerbit/imports/ui/pages/myRequests.html
+++ b/www/kerbit/imports/ui/pages/myRequests.html
@@ -60,15 +60,15 @@
       <br>
       {{#each transactions}}
         <div class="row">
-          <div class="col s12 m7">
+          <div class="col s6">
             <div class="card">
               {{#each ItemWithId itemId}}
+                {{#each ImageWithIds imageIds}}
                 <div class="card-image">
-                  {{#each ImageWithIds imageIds}}
-                    <img src="{{url store='images'}}" alt="request image"
-                         class="responsive-img same-size-image">
-                  {{/each}}
+                  <img src="{{url store='images'}}" alt="request image"
+                       class="responsive-img same-size-image">
                 </div>
+                {{/each}}
                 <div class="card-content">
                   <h5>{{description}}</h5>
                 </div>
