--- a/www/kerbit/imports/ui/pages/myOffers.html
+++ b/www/kerbit/imports/ui/pages/myOffers.html
@@ -8,8 +8,8 @@
   <div class="row">
     <div class="col s12">
       <ul class="tabs">
-        <li class="tab col s6"><a class="active" href="#pending">Pending Offers</a></li>
-        <li class="tab col s6"><a href="#accepted">Accepted Offers</a></li>
+        <li class="tab col s6"><a href="#pending">Pending Offers</a></li>
+        <li class="tab col s6"><a class="active" href="#accepted">Accepted Offers</a></li>
       </ul>
     </div>
     <div id="pending" class="col s12">
