Change clientHistory to only include papertrail and no functionality

--- a/www/kerbit/imports/ui/pages/clientHistory.html
+++ b/www/kerbit/imports/ui/pages/clientHistory.html
@@ -1,86 +1,117 @@
+<!--<template name="ClientHistory">-->
+    <!--{{#OnlyConsumer}}-->
+        <!--{{>ClientHistoryHelper }}-->
+    <!--{{/OnlyConsumer}}-->
+<!--</template>-->
+
+<!--<template name="ClientHistoryHelper">-->
+
+    <!--&lt;!&ndash; TODO fix else block &ndash;&gt;-->
+    <!--{{#if getIsZero}}-->
+        <!--<h3>You have no requests pending collection.</h3>-->
+    <!--{{else}}-->
+        <!--{{#if getIsOne}}-->
+            <!--<h3>You have 1 request pending collection.</h3>-->
+        <!--{{else}}-->
+            <!--<h3>You have {{getPendingCount}} requests pending collection.</h3>-->
+        <!--{{/if}}-->
+    <!--{{/if}}-->
+    <!--<table class="bordered highlight">-->
+        <!--<thead>-->
+        <!--<tr>-->
+            <!--<th>Order ID</th>-->
+            <!--<th>Driver</th>-->
+            <!--<th>Location</th>-->
+            <!--<th>Collection status</th>-->
+        <!--</tr>-->
+        <!--</thead>-->
+        <!--<tbody>-->
+        <!--{{#each pending}}-->
+            <!--<tr>-->
+                <!--<th scope="row">{{_id}}</th>-->
+                <!--<td>-->
+                    <!--{{#with getDriverPhoto driverId}}-->
+                        <!--<a href="/users/{{getDriverName ../driverId}}"> <img-->
+                                <!--src="{{this.url store='userImages'}}"-->
+                                <!--style="width:35px;height:30px;">{{getDriverName ../driverId}}</a>-->
+                    <!--{{/with}}-->
+                <!--</td>-->
+                <!--<td>-->
+                    <!--<button class="btn collect">Collected</button>-->
+                <!--</td>-->
+            <!--</tr>-->
+        <!--{{/each}}-->
+
+        <!--</tbody>-->
+    <!--</table>-->
+
+    <!--<h3> Your last five completed jobs:</h3>-->
+    <!--<table class="bordered highlight">-->
+        <!--<thead>-->
+        <!--<tr>-->
+            <!--<th>Date</th>-->
+            <!--<th>Order ID</th>-->
+            <!--<th>Driver</th>-->
+            <!--<th>Location</th>-->
+            <!--<th>Feedback</th>-->
+        <!--</tr>-->
+        <!--</thead>-->
+        <!--<tbody>-->
+        <!--{{#each transactions}}-->
+            <!--<tr>-->
+                <!--<th>{{formatDate dateConfirmed}}</th>-->
+                <!--<th scope="row">{{_id}}</th>-->
+                <!--<td>{{#with getDriverPhoto driverId}}-->
+                    <!--<a href="/users/{{getDriverName ../driverId}}">-->
+
+                        <!--<img src="{{this.url store='userImages'}}"-->
+                             <!--style="width:35px;height:30px;">{{getDriverName ../driverId}}-->
+                    <!--</a>-->
+                <!--{{/with}}-->
+                <!--</td>-->
+                <!--<td>-->
+                    <!--{{#if hasFeedback _id}}-->
+                        <!--{{> starsRating rating=feedbackScore mutable=false}}-->
+                    <!--{{else}}-->
+                        <!--{{> starsRating id='rating' mutable=true}}-->
+                        <!--<button class="btn ratingButton">Rate this transaction</button>-->
+                    <!--{{/if}}-->
+                <!--</td>-->
+            <!--</tr>-->
+        <!--{{/each}}-->
+        <!--</tbody>-->
+    <!--</table>-->
+
+<!--</template>-->
+
 <template name="ClientHistory">
-    {{#OnlyConsumer}}
-        {{>ClientHistoryHelper }}
-    {{/OnlyConsumer}}
+  {{#OnlyConsumer}}
+    {{>ClientHistoryHelper}}
+  {{/OnlyConsumer}}
 </template>
 
 <template name="ClientHistoryHelper">
-
-    <!-- TODO fix else block -->
-    {{#if getIsZero}}
-        <h3>You have no requests pending collection.</h3>
-    {{else}}
-        {{#if getIsOne}}
-            <h3>You have 1 request pending collection.</h3>
-        {{else}}
-            <h3>You have {{getPendingCount}} requests pending collection.</h3>
-        {{/if}}
-    {{/if}}
-    <table class="bordered highlight">
-        <thead>
-        <tr>
-            <th>Order ID</th>
-            <th>Driver</th>
-            <th>Location</th>
-            <th>Collection status</th>
-        </tr>
-        </thead>
-        <tbody>
-        {{#each pending}}
-            <tr>
-                <th scope="row">{{_id}}</th>
-                <td>
-                    {{#with getDriverPhoto driverId}}
-                        <a href="/users/{{getDriverName ../driverId}}"> <img
-                                src="{{this.url store='userImages'}}"
-                                style="width:35px;height:30px;">{{getDriverName ../driverId}}</a>
-                    {{/with}}
-                </td>
-                <td>
-                    <button class="btn collect">Collected</button>
-                </td>
-            </tr>
-        {{/each}}
-
-        </tbody>
-    </table>
-
-    <h3> Your last five completed jobs:</h3>
-    <table class="bordered highlight">
-        <thead>
-        <tr>
-            <th>Date</th>
-            <th>Order ID</th>
-            <th>Driver</th>
-            <th>Location</th>
-            <th>Feedback</th>
-        </tr>
-        </thead>
-        <tbody>
-        {{#each transactions}}
-            <tr>
-                <th>{{formatDate dateConfirmed}}</th>
-                <th scope="row">{{_id}}</th>
-                <td>{{#with getDriverPhoto driverId}}
-                    <a href="/users/{{getDriverName ../driverId}}">
-
-                        <img src="{{this.url store='userImages'}}"
-                             style="width:35px;height:30px;">{{getDriverName ../driverId}}
-                    </a>
-                {{/with}}
-                </td>
-                <td>
-                    {{#if hasFeedback _id}}
-                        {{> starsRating rating=feedbackScore mutable=false}}
-                    {{else}}
-                        {{> starsRating id='rating' mutable=true}}
-                        <button class="btn ratingButton">Rate this transaction</button>
-                    {{/if}}
-                </td>
-            </tr>
-        {{/each}}
-        </tbody>
-    </table>
+  <h2 class="center-align"> My Recent Requests </h2>
+  <br>
+  <div class="row">
+    <ul class="collapsible popout" data-collapsible="accordion">
+      {{#each transactions}}
+        <li>
+          <div class="collapsible-header active override-padding-left-0">
+            <div class="extra-padding-left-15 border-bottom-thin">
+              <i class="material-icons">receipt</i>
+              {{#with getItem itemId}}
+                {{description}}
+              {{/with}}
+            </div>
+            {{> Transaction}}
+          </div>
+          <div class="collapsible-body">
+            {{> TransactionDetails}}
+          </div>
+        </li>
+      {{/each}}
+    </ul>
+  </div>
 
 </template>
-
